# Fractal-Generator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
fractal/: Fractal.hpp
